fix: change overflow property in places

--- a/blocks/places/__container/places__container.css
+++ b/blocks/places/__container/places__container.css
@@ -1,7 +1,8 @@
 .places__container {
     width: 100%;
-    max-height: 740px;
-    overflow-y: scroll;
+    max-height: 2350px;
+    overflow: hidden;
+/*    overflow-y: scroll; */ 
     display: grid;
     padding: 0;
     margin: 0;
@@ -11,7 +12,7 @@
     grid-auto-flow: row;
     gap: 16px;
 }
-    /*Елизавета, скажите, а это вообще нормальная практика так scrollbar прятать?)*/ 
+    /*Елизавета, скажите, а это вообще нормальная практика так scrollbar прятать?)
 .places__container::-webkit-scrollbar {
     width: 0;
-}
+} */
